--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "npm-run-all": "^4.1.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.1"
+    "react-scripts": "1.1.1",
+    "redux": "^3.7.2",
+    "redux-logger": "^3.0.6"
   },
   "scripts": {
     "start-js": "react-scripts start",
@@ -26,6 +29,7 @@
     "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "^4.18.2",
     "eslint-plugin-react": "^7.7.0",
-    "prop-types": "^15.6.1"
+    "prop-types": "^15.6.1",
+    "redux-devtools": "^3.4.1"
   }
 }
